--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-picture-input": "^2.1.6",
+    "vue-router": "^3.3.4",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
